--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+1.1 (unreleased)
+-------------------
+- Nous tipus de contingut: pagina llibre, nota i detall pagina
+
 1.0 
 -------------------
 Initial version
